[project]
name = "dockhand-mcp"
version = "0.3.0"
description = "MCP server for the Dockhand Docker management API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "docker", "dockhand", "llm"]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "starlette>=0.40.0",
    "fastapi>=0.110.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["live: requires a configured live Dockhand instance"]

[project.scripts]
dockhand-mcp = "dockhand_mcp.server:main"

[project.urls]
Homepage = "https://github.com/m3rrym4n/dockhand-mcp"
Repository = "https://github.com/m3rrym4n/dockhand-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
